[package]
name = "libwebp-image"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

[dependencies]
libwebp = "0.1.0"
image = "0.23"

[features]
default = []
"libwebp-0_5" = ["libwebp/0_5"]
"libwebp-0_6" = ["libwebp/0_6", "libwebp-0_5"]
"libwebp-1_1" = ["libwebp/1_1", "libwebp-0_6"]
