[package]
name = "libwebp-image"
version = "0.3.0-alpha.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"
rust-version = "1.56"

description = "A bridge library for libwebp and image"
homepage = "https://github.com/qnighy/libwebp-image-rs"
repository = "https://github.com/qnighy/libwebp-image-rs"
readme = "README.md"
keywords = ["webp", "image"]
categories = ["multimedia", "multimedia::images"]
license = "MIT OR Apache-2.0"

exclude = [
    ".github",
    "/tests",
]

[badges]
travis-ci = { repository = "qnighy/libwebp-image-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "qnighy/libwebp-image-rs" }
is-it-maintained-open-issues = { repository = "qnighy/libwebp-image-rs" }

[dependencies]
libwebp = "0.1.0"
image = { version = "0.24.0", default-features = false }

[dev-dependencies]
rand = "0.8.3"
approx = "0.4.0"

[features]
default = []
"libwebp-0_5" = ["libwebp/0_5"]
"libwebp-0_6" = ["libwebp/0_6", "libwebp-0_5"]
"libwebp-1_1" = ["libwebp/1_1", "libwebp-0_6"]
